--- a/Apps/homepage/docker-compose.yml
+++ b/Apps/homepage/docker-compose.yml
@@ -37,4 +37,4 @@ x-casaos:
   thumbnail: https://cdn.jsdelivr.net/gh/walkxcode/dashboard-icons/png/homepage.png
   title:
     en_us: Homepage
-  category: Utilities
+  category: FFBDev
